# bot

./: .gitignore  .gitlab-ci.yml  CHANGES.md  HomeServices.drawio  Home_network.drawio  Mikrotik_VLANs.drawio  README.md  Untitled Diagram.drawio  pyproject.toml  setup.cfg  setup.py  tox-gitlab.ini  tox.ini
.github/workflows/: python-package.yml
shell/etc/: macs.txt  services.txt  xymon_graphs-vpncerts.cfg
src/stools/lib/: stools_defaults.py
src/tools/: id3checker.py  total_block_off.cfg  total_block_on.cfg
src/tools/lib/: logging_utils.py  parse_args.py  stools_defaults.py  text_utils.py
src/tools/libs/: logging_utils.py  net_utils.py  parse_args.py  stools_defaults.py  text_utils.py  total_block_config.py  vip_utils.py  xymon.py
test/: conftest.py  rename_media.bats  test_all.py  test_arp_map.py  test_backup_mysql.py  test_cloudflare_dns.py  test_config_e2g.py  test_config_proxy.py  test_freedns.py  test_id3checker.py  test_keepalived_status.py  test_ldap_browser.py  test_minecraft_ctl.py  test_music_tags_report.py  test_net_utils.py  test_nwn.py  test_openvpn_log.py  test_service_map.py  test_simple_service_map.py  test_slapd_log.py  test_ssh_cert_manager.py  test_stools_defaults.py  test_text_utils.py  test_total_block.py  test_vip_utils.py  test_xymon.py
test/fixtures/: keepalived-v2.data  keepalived.data  ldap_browser_data.py  slapd-202005120558.json  slapd-202005120558.out
test/shell/: rename_media.bats
