[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'NicolaCanepa_Tools'
version = "0.1.2"
description = "Useful tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    'attrs',
    'click',
    'click-loglevel',
    'dnspython',
    'eyed3',
    'netifaces-plus',
    'ping3',
    'requests',
    'typing;python_version<"3.7"',
    'ConfigArgParse',
]
authors = [
    {name = 'Nicola Canepa', email = 'canne74@gmail.com'},
]
    # packages=setuptools.find_packages('src', exclude=['.tox', 'test']),
    # package_dir={"": "src"},
    # data_files=data_files,
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]
license = "MIT"

[project.optional-dependencies]
ldap = [ "python-ldap" ]

[project.scripts]
"all.py" = "tools.bin.all:main"
arp-map = "tools.bin.arp_map:main"
"cloudflare_dns.py" = "tools.bin.cloudflare_dns:main"
compare-ka = "tools.bin.compare_ka:main"
config_e2g = "tools.bin.config_proxy:main"  # compat
config_proxy = "tools.bin.config_proxy:main"
"freedns.py" = "tools.bin.freedns:main"
html-series = "tools.bin.html_series:main"
id3-checker = "tools.bin.id3checker:main"
ldap_browse = "tools.bin.ldap_browser:main [ldap]"
openvpn-log = "tools.bin.openvpn_log:main"
qsm = "tools.bin.quick_service_map:main"
"remote_diff.py" = "tools.bin.remote_diff:main"
"sdiff.py" = "tools.bin.sdiff:main"
sservice = "tools.bin.service:main"
service-map = "tools.bin.simple_service_map:main"
slapd_log = "tools.bin.slapd_log:main"
"ssync.py" = "tools.bin.ssync:main"
tags-report = "tools.bin.music_tags_report:main"
total_block = "tools.bin.total_block:main"
xymon-speedtest = "tools.bin.xymon_speedtest:main"

[tool.black]
# target-version = ['py3']
skip-string-normalization = true
line-length = 120
exclude = '''
(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.setuptools]
packages = {find = {where = ["src"], exclude = [".tox", "test"]}}

[dependency-groups]
dev = [
    "tox>=4.28.4",
    "pytest",
]

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--doctest-modules",
    "--cov=tools",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--black",
    "--mypy",
    "--flake8",
    # Uncomment to enforce a minimum code coverage threshold.
    # "--cov-fail-under=50"
]
testpaths = ["test"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "test/",
    ".tox/"
]

[tool.flake8]
max-complexity = 16
max-line-length = 120

[tool.mypy]
ignore_missing_imports = true
show_column_numbers = true
show_error_context = false
strict_optional = false
follow_imports = "skip"

[tool.distutils.egg_info]
# This configuration will make the egg-info directory appear in your package's build directory instead of src/
egg_base = "build"

